--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Format project
-      - run: dotnet format BlogMVC.sln
+      - run: dotnet format Blog.Web.sln
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
